feat: password-change endpoint
